--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,6 +3,13 @@
  
 <body background="@routes.Assets.at("images/background.jpg")" style="background-size: 1420px 900px;">
 
+<div class="col-md-8">
+	<div id="opacity" class="jumbotron" style="height: 380px;">
+	</div>
+	</div>
+
+
+
 
 	</body>
 
