--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,12 +1,11 @@
 @(message: String)	@main("Bindeleddet") {
 
- 
-<body background="@routes.Assets.at("images/background.jpg")" style="background-size: 1420px 900px;">
+<body background="@routes.Assets.at("images/background.jpg")" style="background-size: 1570px 900px;">
 
-<div class="col-md-8">
-	<div id="opacity" class="jumbotron" style="height: 380px;">
+<!-- <div class="col-md-10 hero-spacer">
+	<div class="opacity jumbotron" style="height: 500px;">
 	</div>
-	</div>
+	</div> -->
 
 
 
