--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @(message: String)	@main("Bindeleddet") {
 
-<body background="@routes.Assets.at("images/background.jpg")" style="background-size: 1570px 900px;">
+<body >
 
 <!-- <div class="col-md-10 hero-spacer">
 	<div class="opacity jumbotron" style="height: 500px;">
