--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -30,14 +30,13 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-             <li><a href="#store" class="">Hjem</a>
+             <li><a href="@routes.Application.index()" class="">Hjem</a>
                 </li>
-                <li><a href="#store" class="">Bedrifter</a>
+                <li><a href="#bedrifter" class="">Bedrifter</a>
                 </li>
-                <li><a href="#mac" class="">Om oss</a>
+                <li><a href="#omOss" class="">Om oss</a>
                 </li>
-                <li><a href="#iphone" class="">Logg inn</a>
-                </li>
+                <li><a href="@routes.Application.login"> Logg inn </a></li>
             </ul>
             <form class="navbar-form" role="search">
                 <div class="input-group">
