--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -1,12 +1,37 @@
+body {
+     background-image:url("../images/background.jpg");
+     background-attachment: fixed; 
+  	 -webkit-background-size: cover;
+     -o-background-size: cover;
+     -moz-background-size: cover;
+     background-size: cover;
+}
 .opacity{
 	background: rgba(191, 191, 191, 0.9); 
 }
 
 .move-down{
-	margin-top:50px;
+	margin-top:100px;
+}
+@font-face{
+	font-family: timeFont;
+	src:url("../Font/KozGoPro.otf"); 
+}
+ .timeFont{
+	font-family: timeFont;
+ }
+ .opacity1{
+	opacity: 0.9; 
 }
 
+.black{
+	background: rgb(0, 0, 0); 
+   	background: rgba(0, 0, 0, 0.7);
+}
 
+.white{
+	color: #ffffff;
+}
 
 
 
