--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -37,6 +37,7 @@
                 <li><a href="#omOss" class="">Om oss</a>
                 </li>
                 <li><a href="@routes.Application.login"> Logg inn </a></li>
+                <li><a href="@routes.Application.addAdvertisement"> Legg til </a></li>
             </ul>
             <form class="navbar-form" role="search">
                 <div class="input-group">
