--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -5,7 +5,7 @@
 	<div class="col-md-4 col-xs-4 hero-spacer"></div>
 	<div class="col-md-4 col-xs-12 hero-spacer">
 	
-	<div class="jumbotron black opacity1">
+	<div class="jumbotron black">
 	<legend><span class="timeFont white"><h3>Logg inn</h3></span></legend>
 	
 <input type="text" class="form-control" placeholder="Bruker">
