--- a/app/views/addAdvertisement.scala.html
+++ b/app/views/addAdvertisement.scala.html
@@ -1,42 +1,117 @@
 @(title: String) @main(title){
 
-<div class="row move-down">
-	<div class="col-md-10 col-xs-10 hero-spacer"></div>
-	<div class="jumbotron black">
- <form type="input" method="get">
-		<div class="row">
-			<div class="col-md-4 hero-spacer">
-				<input type="text" class="form-control" placeholder="Tittel">
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/datepicker.css")">
+<script src="@routes.Assets.at("javascripts/bootstrap-datepicker.js")" type="text/javascript"></script>
+
+<form method="post" action="@routes.Application.uploadData()">
+	<div class="row move-down">
+		<div class="col-md-10 col-xs-10 hero-spacer"></div>
+		<div class="jumbotron black">
+
+			<div class="row">
+				<div class="col-md-4 hero-spacer">
+					<input type="text" name="tittel" class="form-control"
+						placeholder="Tittel">
+				</div>
+				<div class="col-md-4 hero-spacer">
+					<input type="text" name="sted" class="form-control"
+						placeholder="Sted">
+				</div>
+				<div class="col-md-4 hero-spacer">
+					<input type="text" name="typeId" class="form-control"
+						placeholder="Jobbtype">
+				</div>
 			</div>
-			<div class="col-md-4 hero-spacer">
-				<input type="text" class="form-control" placeholder="Sted">
+			<br>
+
+			<div class="row">
+				<div class="col-md-4 hero-spacer">
+					<input type="text" name="kontaktNavn" class="form-control"
+						placeholder="Kontaktperson">
+				</div>
+				<div class="col-md-4 hero-spacer">
+					<input type="text" name="kontaktEmail" class="form-control"
+						placeholder="Kontakt mail">
+				</div>
+				<div class="col-md-4 hero-spacer">
+					<input type="text" name="bedriftsNavn" class="form-control"
+						placeholder="Bedriftsnavn">
+				</div>
 			</div>
-			<div class="col-md-4 hero-spacer">
-				<input type="text" class="form-control" placeholder="Jobbtype">
-			</div>
-		</div>
-		<br>
-		<div class="row">
-			<div class="col-md-4 hero-spacer">
-				<input type="text" class="form-control" placeholder="Kontaktperson">
-			</div>
-			<div class="col-md-4 hero-spacer">
-				<input type="text" class="form-control" placeholder="Kontakt mail">
-			</div>
-			<div class="col-md-4 hero-spacer">
-				<input type="text" class="form-control" placeholder="Kontakt tlf">
-			</div>
-		</div>
-		<br></t>
-		<div class="row">
-		<div class="col-md-4 hero-spacer">
-				<button type="submit" class="btn btn-primary">Legg til</button>
+			<br>
+
+			<div class="row">
+				<div class="col-md-4 hero-spacer">
+					<input type="text" name="linjeId" class="form-control"
+						placeholder="Linje">
+				</div>
+				<div class="col-md-4 hero-spacer">
+					<input type="text" name="trinnId" class="form-control"
+						placeholder="Trinn">
+				</div>
+				<div class="col-md-4 hero-spacer">
+					<input type="text" name="url" class="form-control"
+						placeholder="URL">
+				</div>
 			</div>
 			
-		</div>
-</form>
-	</div>
-</div>
-</div>
 
+			<br>
+			<div class="row">
+				<div class="col-md-12 hero-spacer">
+					<textarea class="form-control" name="info" rows="5"
+						placeholder="Info"></textarea>
+				</div>
+			</div>
+
+			<br>
+
+
+	
+			<div class="row">
+			
+				<div class="col-md-1 hero-spacer">
+					<h5 class="white">Prioritet</h5>
+					<input type="checkbox" name="prioritet" value="1">
+				</div>
+				<div class="col-md-2 hero-spacer">			
+			 		<div class="container">
+            			<div class="hero-unit">
+                			<input  type="text" name ="frist" class="form-control" placeholder="Frist"  id="example1">
+            			</div>
+        			</div>
+        		<!-- Load jQuery and bootstrap datepicker scripts -->
+        		<script src="js/jquery-1.9.1.min.js"></script>
+        		<script src="js/bootstrap-datepicker.js"></script>
+       				 <script type="text/javascript">
+            			$(document).ready(function () {
+               				 $('#example1').datepicker({
+                    		format: "yyyy-mm-dd"
+               			 });  
+            
+            			});
+        			</script>		
+				</div>
+				<div class="col-md-2 hero-spacer">
+					<input type="text" name="varighet" class="form-control"
+						placeholder="Varighet">
+				</div>
+			
+			</div>
+
+			<br>
+			</t>
+			<div class="row">
+				<div class="col-md-4 hero-spacer">
+					<button type="submit" class="btn btn-default">Legg til</button>
+				</div>
+
+				<br>
+			</div>
+
+		</div>
+	</div>
+</form>
 }
+
+
