--- a/app/views/addAdvertisement.scala.html
+++ b/app/views/addAdvertisement.scala.html
@@ -4,8 +4,7 @@
 <script src="@routes.Assets.at("javascripts/bootstrap-datepicker.js")" type="text/javascript"></script>
 
 <form method="post" action="@routes.Application.uploadData()">
-	<div class="row move-down">
-		<div class="col-md-10 col-xs-10 hero-spacer"></div>
+	<div class="row">
 		<div class="jumbotron black">
 
 			<div class="row">
