--- a/app/views/angular.scala.html
+++ b/app/views/angular.scala.html
@@ -1,5 +1,5 @@
-@(title: String)
-@main(title){
+@(json: String, title: String)
+@main(json){
 
 <html ng-app="phonecatApp">
 	<head>
@@ -7,11 +7,8 @@
 <script type="text/javascript" language="JavaScript">
 
 var phonecatApp = angular.module('phonecatApp', []);
-
 phonecatApp.controller('PhoneListCtrl', function($scope) {
 $scope.phones = $.parseJSON($(document).find("title").text());
-	
-  alert($scope.phones);
 $scope.orderProp = 'age';
 });
 
@@ -39,8 +36,8 @@ $scope.orderProp = 'age';
 
  <ul class="phones">
  <li ng-repeat="phone in phones | filter:query | orderBy:orderProp" class="thumbnail">
- <a href="/detail?id={{phone.id}}">{{phone.name}}</a>
- <p>{{phone.snippet}}</p>
+ <a href="/detail?id={{phone.annonseid}}">{{phone.annonseid}}</a>
+ <p>{{phone.info}}</p>
 
  </li>
  </ul>
