--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -12,7 +12,7 @@
 <br>
 <input type="password" class="form-control" placeholder="Passord">
 <br>
-<button type="submit" class="btn btn-primary">Logg på</button>
+<button type="submit" class="btn btn-default">Logg på</button>
 <input type="button" onclick="indexRedirect()" value="Avbryt" class="btn btn-danger">
 	</div>  
 	</div>
