--- a/app/views/detail.scala.html
+++ b/app/views/detail.scala.html
@@ -30,10 +30,9 @@
 					</tbody>
 				</table>
 </div>
-<div class="col-md-1 hero-spacer"">
-</div>
 
-<div class="col-md-6 hero-spacer"">
+
+<div class="col-md-7 hero-spacer" style="margin-left:2em">
 
 	<div class="white">
 	<h1>@annonseList.get(11)</h1>
