--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,6 +5,9 @@
 <html>
     <head>
         <title>@title</title>
+		
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
         <link rel="stylesheet" type="text/css"href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/site.css")"> 
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/navbar.min.css")">
