--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,12 +11,14 @@
         <link rel="stylesheet" type="text/css"href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/site.css")"> 
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/navbar.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-select.min.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
                 
        	<script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/navbar.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/filter_list.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap-select.min.js")" type="text/javascript"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-resource.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-route.min.js"></script>
