--- a/app/views/detail.scala.html
+++ b/app/views/detail.scala.html
@@ -1,4 +1,4 @@
-@(title: String, annonseList: List[String])
+@(title: String, divInfo: List[String], linje: List[String], stilling: List[String], trinn: List[String])
 @main(title){
 
 <div class="jumbotron black">
@@ -9,23 +9,40 @@
 					<tbody>
 						<tr>
 							<td>Firmanavn</td>
-							<th>@annonseList.get(10)</th>
+							<th>@divInfo.get(5)</th>
 						</tr>
 						<tr>
 							<td>Stillingstype</td>
-							<th>@annonseList.get(1)</th>
+							<th>@for(i <- 0 until stilling.length) {
+              					@Html(stilling.get(i))
+             					 <br>
+             			}</th>
+						</tr>
+						<tr>
+							<td>Krevet utdanning</td>
+							<th> @for(i <- 0 until linje.length) {
+              					@Html(linje.get(i))
+             					 <br>
+             			}</th>
+						</tr>
+						<tr>
+							<td>Krevet årstrinn</td>
+							<th>@for(i <- 0 until trinn.length) {
+              					@Html(trinn.get(i))
+             					 <br>
+             			}</th>
 						</tr>
 						<tr>
 							<td>Arbeidssted</td>
-							<th>@annonseList.get(9)</th>
+							<th>@divInfo.get(1)</th>
 						</tr>
 						<tr>
 							<td>Varighet</td>
-							<th>@annonseList.get(2) uker</th>
+							<th>@divInfo.get(6) uker</th>
 						</tr>
 						<tr>
 							<td>Søknadsfrsit</td>
-							<th>@annonseList.get(8)</th>
+							<th>@divInfo.get(2)</th>
 						</tr>
 					</tbody>
 				</table>
@@ -35,8 +52,8 @@
 <div class="col-md-7 hero-spacer" style="margin-left:2em">
 
 	<div class="white">
-	<h1>@annonseList.get(11)</h1>
-	<h4>@annonseList.get(0)</h4>
+	<h1>@divInfo.get(0)</h1>
+	<h4>@divInfo.get(4)</h4>
 	</div>
 
 </div>
@@ -51,15 +68,15 @@
 					<tbody>
 						<tr>
 							<td>Kontaktperson</td>
-							<th>@annonseList.get(6)</th>
+							<th></th>
 						</tr>
 						<tr>
 							<td>Mail</td>
-							<th>@annonseList.get(7)</th>
+							<th></th>
 						</tr>
 						<tr>
 							<td>Url</td>
-							<th><a href=@annonseList.get(5)>Link</a></th>
+							<th><a href=@divInfo.get(7)>Link</a></th>
 						</tr>
 					</tbody>
 				</table>
