--- a/app/views/angular.scala.html
+++ b/app/views/angular.scala.html
@@ -26,23 +26,27 @@ $scope.getData = function (phones, query) {
 	
 	<body ng-controller="PhoneListCtrl">
 
-<div class="row">
-<div class="col-sm-4 col-md-4"></div>
-<div class="col-sm-4 col-md-2">
-<span class="avenir white"><h1>Sørlandsportalen</h1></span>
-</div>
 
 
+<div class="row move-down2">
+<div class="col-sm-3 col-md-4"></div>
+<div class=" col-sm-4 col-md-8">
+<font class=" white" size="10">
+Sørlandsportalen</font>
 </div>
+</div>
+
 
 <div class="row move-down">
-<div class="col-md-3"></div>
+<div class="col-md-3 col-sm-4"></div>
 <div class="col-xs-12 col-md-6">
 <input ng-model="query" type="text" class="form-control" placeholder="Search">
 </div>
 
 </div>
 <br>
+
+
 <div class="row">
 <div class="col-md-3"></div>
 <div class="col-sm-4 col-md-2">
@@ -75,36 +79,8 @@ $scope.getData = function (phones, query) {
     <option>Fornybar</option>
 </select>
 </div>
-
-<!-- <div class="col-sm-3 col-md-3">
-<select class="selectpicker" multiple title='Årstrinn' data-selected-text-format="count>3"> 
-      <option>1.Klasse</option>
-      <option>2.Klasse</option>
-      <option>3.Klasse</option>
-      <option>4.Klasse</option>
-      <option>5.Klasse</option>
-  </select>
 </div>
 
-<div class="col-sm-3 col-md-3">
-<select class="selectpicker" multiple title='Jobbtype' data-selected-text-format="count>3"> 
-      <option>Fulltid</option>
-      <option>Deltid</option>
-      <option>Sommerjobb</option>
-  </select>
-</div>
-
-<div class="col-sm-3 col-md-3">
-<select class="selectpicker" multiple title='Utdanning' data-selected-text-format="count>2" data-live-search="true"> 
-      <option>Data</option>
-      <option>Byggdesign</option>
-      <option>Mekatronikk</option>
-      <option>Elektronikk</option>
-      <option>Fornybar</option>
-  </select>
-</div> -->
-
-</div>
 
 <br>
 
