--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -39,7 +39,7 @@
 			<div class="row">
 			<div class="col-lg-5" id="footer">
 				</div>
-				<div class="col-lg-7" id="footer">
+				<div class="col-lg-7 white" id="footer">
 					
 				</div>
 			</div>
