--- a/app/views/addAdvertisement.scala.html
+++ b/app/views/addAdvertisement.scala.html
@@ -16,10 +16,11 @@
 					<input type="text" name="sted" class="form-control"
 						placeholder="Sted">
 				</div>
-				<div class="col-md-4 hero-spacer">
-					<input type="text" name="typeId" class="form-control"
-						placeholder="Jobbtype">
+					<div class="col-md-4 hero-spacer">
+					<input type="text" name="bedriftsNavn" class="form-control"
+						placeholder="Bedriftsnavn">
 				</div>
+
 			</div>
 			<br>
 
@@ -32,27 +33,13 @@
 					<input type="text" name="kontaktEmail" class="form-control"
 						placeholder="Kontakt mail">
 				</div>
-				<div class="col-md-4 hero-spacer">
-					<input type="text" name="bedriftsNavn" class="form-control"
-						placeholder="Bedriftsnavn">
-				</div>
-			</div>
-			<br>
-
-			<div class="row">
-				<div class="col-md-4 hero-spacer">
-					<input type="text" name="linjeId" class="form-control"
-						placeholder="Linje">
-				</div>
-				<div class="col-md-4 hero-spacer">
-					<input type="text" name="trinnId" class="form-control"
-						placeholder="Trinn">
-				</div>
-				<div class="col-md-4 hero-spacer">
+			<div class="col-md-4 hero-spacer">
 					<input type="text" name="url" class="form-control"
 						placeholder="URL">
 				</div>
 			</div>
+			<br>
+
 			
 
 			<br>
@@ -65,14 +52,74 @@
 
 			<br>
 
-
-	
 			<div class="row">
-			
-				<div class="col-md-1 hero-spacer">
-					<h5 class="white">Prioritet</h5>
-					<input type="checkbox" name="prioritet" value="1">
+<div class="col-md-1 hero-spacer">
+					<h5 class="white">1.klasse</h5>
+					<input type="checkbox" name="1.klasse" value="1">
 				</div>
+				<div class="col-md-1 hero-spacer">
+					<h5 class="white">2.klasse</h5>
+					<input type="checkbox" name="2.klasse" value="1">
+				</div>
+				<div class="col-md-1 hero-spacer">
+					<h5 class="white">3.klasse</h5>
+					<input type="checkbox" name="3.klasse" value="1">
+				</div>
+				<div class="col-md-1 hero-spacer">
+					<h5 class="white">4.klasse</h5>
+					<input type="checkbox" name="4.klasse" value="1">
+				</div>
+				<div class="col-md-1 hero-spacer">
+					<h5 class="white">5.klasse</h5>
+					<input type="checkbox" name="5.klasse" value="1">
+				</div>
+
+			</div>
+			<br>
+						<div class="row">
+				<div class="col-md-2 hero-spacer">
+					<h5 class="white">Sommerjobb</h5>
+					<input type="checkbox" name="Sommerjobb" value="1">
+				</div>
+				<div class="col-md-1 hero-spacer">
+					<h5 class="white">Deltid</h5>
+					<input type="checkbox" name="Deltid" value="1">
+				</div>
+				<div class="col-md-1 hero-spacer">
+					<h5 class="white">Fulltid</h5>
+					<input type="checkbox" name="Fulltid" value="1">
+				</div>	
+			</div>
+				<br>
+							<div class="row">
+				<div class="col-md-1 hero-spacer">
+					<h5 class="white">Data</h5>
+					<input type="checkbox" name="Data" value="1">
+				</div>
+				<div class="col-md-1 hero-spacer">
+					<h5 class="white">Mekatronikk</h5>
+					<input type="checkbox" name="Mekatronikk" value="1">
+				</div>
+				<div class="col-md-1 hero-spacer">
+					<h5 class="white">Fornybar</h5>
+					<input type="checkbox" name="Fornybar" value="1">
+				</div>
+				<div class="col-md-1 hero-spacer">
+					<h5 class="white">Byggdesign</h5>
+					<input type="checkbox" name="Byggdesign" value="1">
+				</div>
+				<div class="col-md-1 hero-spacer">
+					<h5 class="white">Elektronikk</h5>
+					<input type="checkbox" name="Elektronikk" value="1">
+				</div>
+				<div class="col-md-1 hero-spacer">
+					<h5 class="white">Indøk</h5>
+					<input type="checkbox" name="Indok" value="1">
+				</div>
+
+			</div>
+			<br>
+			<div class="row">
 				<div class="col-md-2 hero-spacer">			
 			 		<div class="container">
             			<div class="hero-unit">
