--- a/app/views/detail.scala.html
+++ b/app/views/detail.scala.html
@@ -1,9 +1,9 @@
 @(title: String, divInfo: List[String], linje: List[String], stilling: List[String], trinn: List[String])
 @main(title){
 
-<div class="jumbotron black">
+<div class="move-down jumbotron black2">
 <div class="row">
-<div class="col-md-4 hero-spacer">
+<div class="col-md-4">
 <h4 class="white">Info</h4>
 <table class="table table-condensed white" id="table">
 					<tbody>
@@ -48,8 +48,9 @@
 				</table>
 </div>
 
+<div class="col-md-1"></div>
 
-<div class="col-md-7 hero-spacer" style="margin-left:2em">
+<div class="col-md-6" style="margin-left:2em">
 
 	<div class="white">
 	<h1>@divInfo.get(1)</h1>
